--- a/examples/postgres/files/Cargo.toml
+++ b/examples/postgres/files/Cargo.toml
@@ -9,4 +9,4 @@ edition = "2021"
 anyhow = "1.0"
 async-std = { version = "1.8.0", features = [ "attributes" ] }
 sqlx = { path = "../../../", features = ["postgres", "offline", "runtime-async-std-native-tls"] }
-dotenv = "0.15.0"
+dotenvy = "0.15.0"
