--- a/examples/postgres/json/Cargo.toml
+++ b/examples/postgres/json/Cargo.toml
@@ -7,7 +7,7 @@ workspace = "../../../"
 [dependencies]
 anyhow = "1.0"
 async-std = { version = "1.6.0", features = [ "attributes" ] }
-dotenv = "0.15.0"
+dotenvy = "0.15.0"
 futures = "0.3"
 paw = "1.0"
 serde = { version = "1", features = ["derive"] }
