--- a/examples/postgres/mockable-todos/Cargo.toml
+++ b/examples/postgres/mockable-todos/Cargo.toml
@@ -11,6 +11,6 @@ futures = "0.3"
 paw = "1.0"
 sqlx = { path = "../../../", features = ["postgres", "offline", "runtime-async-std-native-tls"] }
 structopt = { version = "0.3", features = ["paw"] }
-dotenv = "0.15.0"
+dotenvy = "0.15.0"
 async-trait = "0.1.41"
 mockall = "0.11"
