--- a/sqlx-bench/Cargo.toml
+++ b/sqlx-bench/Cargo.toml
@@ -37,7 +37,7 @@ sqlite = ["sqlx/sqlite"]
 
 [dependencies]
 criterion = "0.3.3"
-dotenv = "0.15.0"
+dotenvy = "0.15.0"
 once_cell = "1.4"
 sqlx = { version = "0.6", path = "../", default-features = false, features = ["macros"] }
 sqlx-rt = { version = "0.6", path = "../sqlx-rt", default-features = false }
