--- a/sqlx-test/Cargo.toml
+++ b/sqlx-test/Cargo.toml
@@ -7,7 +7,7 @@ publish = false
 [dependencies]
 sqlx = { default-features = false, path = ".." }
 env_logger = "0.9.0"
-dotenv = "0.15.0"
+dotenvy = "0.15.0"
 anyhow = "1.0.26"
 async-std = { version = "1.8.0", features = [ "attributes" ] }
 tokio = { version = "1.0.1", features = [ "full" ] }
